clean up and review comments #1